--- a/walrus.html
+++ b/walrus.html
@@ -5,7 +5,7 @@
   <title>The Walrus: a strange and noble creature</title>
 </head>
 <body>
-  <img src="pictures/logo.png" alt="My logo.">
+  <img class="editing" src="pictures/logo.png" alt="My logo.">
   <p>The walrus is truly a majestic animal. Lorem ipsum dolor sit amet, consectetur adipisicing elit,
      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
      nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
@@ -15,3 +15,5 @@
      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 </body>
 </html>
+
+
